Add height and width to CSS properties

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -40,25 +40,33 @@ body{
 }
 
 .staff-info {
+    position: relative;
     height: 500px;
-    width: 300px;
+    width: 25%;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     background-color: red;
+
 }
 
 .staff-name {
-height: 30px;
-width: 60px;
+height: 70px;
+width: 150px;
 background-color: blue;
 }
 
 .staff-blurb {
-height: 150px;
-width: 150px;
+height: 170px;
+width: 170px;
+background-color: pink;
 }
 
 .staff-image {
-
+    position: relative;
+    height: 200px;
+    width: 200px;
+    background-color: orange;
+    border-radius: 50%;
 }
