--- a/stylesheet.css
+++ b/stylesheet.css
@@ -82,8 +82,19 @@ body{
     }
 }
 
+.aboutus {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.main-logo {
+    width: 300px;
+}
+
 .about-us-container {
     display: flex;
+
     width: 100%;
 }
 
