--- a/stylesheet.css
+++ b/stylesheet.css
@@ -159,3 +159,11 @@ outline: thick dashed rgba(1,22,39, 0.2);
     margin: 5rem;
 }
 
+.flexcenter{
+    display: flex;
+    justify-content: center;
+}
+
+.sixtych{
+    max-width: 60ch;
+}
