changed inline styles to classes

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -9,8 +9,28 @@
     --tertiary-colour: hsl(35, 100%, 55%);
     --tiffany-blue-colour: hsl(174, 62%, 47%);     
     --bg-colour:hsl(100, 100%, 99%);     
-    font-size: 1rem; 
+    --font-size: 1rem;
 }  
+
+.fascinate-font {
+    font-family: 'Fascinate', cursive;
+}
+
+.font-md {
+    font-size: 2.2rem;
+}
+
+.font-lg {
+    font-size: 3rem;
+}
+
+.font-red {
+    color: #E71D36;
+}
+
+.font-blue {
+    color: #2EC4B6;
+}
 /* Craigs colors- https://coolors.co/011627-fdfffc-2ec4b6-e71d36-ff9f1c
 orange peel- hsl(35, 100%, 55%)
 Rose Madder - hsl(353, 81%, 51%)
@@ -122,7 +142,7 @@ font-family: 'Roboto Mono', monospace;
 font-size: 0.8rem;
 height: 60px;
 width: 150px;
-background-color:rgba(1,22,39, 0.95);
+background-color: rgba(1,22,39, 0.8);
 position: absolute;
 z-index: 1;
 top: 15%;
