--- a/stylesheet.css
+++ b/stylesheet.css
@@ -25,23 +25,23 @@
 }
 
 .font-red {
-    color: #E71D36;
+    color: var(--secondary-colour);
 }
 
 .font-blue {
-    color: #2EC4B6;
+    color: var(--tiffany-blue-colour);
 }
 body{    
     font-family: 'Roboto Mono', monospace;
     color: var(--main-colour); 
-    background: rgb(46,196,182);
+    background: var(--tiffany-blue-colour);
     background: linear-gradient(10deg, rgba(46,196,182,0.2) 20%, rgba(255,159,28,0.2) 75%, rgba(231,29,54,0.2) 100%); 
-    padding-bottom: 100px;
+    
 }
     .navbar{     
     overflow: hidden;     
     position: relative; 
-    padding:1rem;
+    padding:2.5rem;
 } 
 .navbar:hover{
     background-color: var(--tertiary-colour);
@@ -61,8 +61,8 @@ body{
 #nav-links a{     
     color: var(--tiffany-blue-colour);     
     padding: 1rem; 
-    margin-top: 5vh;
-    margin-bottom: 5vh;
+    margin-top: 6vh;
+    margin-bottom: 4vh;
     display: block; 
     transition: 0.6s ease;
     border-radius: 1.5rem;
@@ -148,13 +148,13 @@ font-family: 'Roboto Mono', monospace;
 font-size: 0.8rem;
 height: 60px;
 width: 150px;
-background-color: rgba(1,22,39, 0.8);
+background-color: var(--main-colour);
 position: absolute;
 z-index: 1;
 top: 15%;
 left: 5%;
 text-align: center;
-color:rgb(253,255,252);
+color: var(--bg-colour);
 padding: 5px;
 border-radius: 5%;
 }
@@ -165,12 +165,12 @@ font-weight: bold;
 font-size: 0.5em;
 position: absolute;
 width: 70%;
-background-color:rgba(253,255,252,0.6);
+background-color:var(--bg-colour);
 top: 76%;
 right: 5%;
-color: #011627;
-padding: 7px;
-outline: thick dashed rgba(1,22,39, 0.2);
+color: var(--main-colour);
+padding: 0.5rem;
+outline: thick dashed var(--main-colour);
 }
 
 .staff-image-container {
@@ -188,7 +188,7 @@ outline: thick dashed rgba(1,22,39, 0.2);
     display: inline;
     margin: auto;
     border-radius: 5%;
-    outline: thick dashed rgba(253,255,252,0.7);
+    outline: thick dashed var(--bg-colour);
 }
 
 .formsection{
@@ -218,4 +218,14 @@ outline: thick dashed rgba(1,22,39, 0.2);
     background-color:var(--secondary-colour);
     cursor: pointer;
     color: var(--bg-colour);
+}
+footer{
+background-color: var(--tertiary-colour);
+  position: relative;
+  margin: 0 ;
+  padding: 2rem 1.5rem 1.5rem 1.5rem;
+  text-align: center;;
+}   
+.copyright p{
+  margin-top: 1rem;
 }
