--- a/stylesheet.css
+++ b/stylesheet.css
@@ -224,7 +224,7 @@ background-color: var(--tertiary-colour);
   position: relative;
   margin: 0 ;
   padding: 2rem 1.5rem 1.5rem 1.5rem;
-  text-align: center;;
+  text-align: center;
 }   
 .copyright p{
   margin-top: 1rem;
