--- a/stylesheet.css
+++ b/stylesheet.css
@@ -34,22 +34,21 @@ body{
     background-color: var(--tertiary-colour);
     color: var(--bg-colour);
 }
-.navbar:hover #nav-links a{
+.navbar:hover .nav-linksclass a{
     color: var(--bg-colour);
 }
-#nav-links a:hover{
+.nav-linksclass a:hover{
     background-color: var(--secondary-colour);
 }
-#nav-links{     
+.nav-linksclass{     
     display: none;
     flex-direction: column;
     justify-content:center;
 }
-#nav-links a{     
+.nav-linksclass a{     
     color: var(--tiffany-blue-colour);     
     padding: 1rem; 
-    margin-top: 5vh;
-    margin-bottom: 5vh;
+    margin: 5vh 0;
    
 }  
 .logo{
@@ -57,7 +56,7 @@ body{
    left:0;
    top:0;
 }
-#hamburger-menu{
+.hamburger{
     position:absolute;
     right:0;
     top:0;
@@ -72,18 +71,15 @@ body{
 }
 
 @media only screen and (min-width:768px) {
-    #nav-links a{     
+    .nav-linksclass a{     
         display:flex; 
         flex-direction: row;
         justify-content:center;
         align-items:center;
     }  
-    #hamburger-menu{
-        /* display:none; */
-    }
 }
 
-#aboutus {
+.aboutusclass {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -98,11 +94,9 @@ body{
 }
 
 .about-us-container {
-    display: flex;
     flex-wrap: wrap;
     margin: 1rem 0 0rem 0;
     width: 100%;
-    justify-content: center;
 }
 
 .staff-info {
