--- a/stylesheet.css
+++ b/stylesheet.css
@@ -203,6 +203,21 @@ outline: thick dashed var(--main-colour);
 .sixtych{
     max-width: 60ch;
 }
+
+.contact-form-input {
+    margin-bottom: 1rem;
+    width: 20vw;
+    min-width: 250px;
+    outline: solid thin var(--main-colour);
+}
+
+.contact-method {
+    line-height: 2;
+    padding: 0 0.5rem 1rem 0.5rem;
+    border: none;
+    /* outline: none; */
+}
+
 .submit-btn{
     transition: 0.6s ease;
     border-radius: 1.5rem;
